--- a/client/src/pages/CalendarPage/CalendarPage.scss
+++ b/client/src/pages/CalendarPage/CalendarPage.scss
@@ -7,6 +7,18 @@
 .calendar-page {
   padding: 20px;
   background-color: $primary-pale-blue;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+
+  @include tablet {
+    padding-left: 2.15rem;
+    padding-right: 2.15rem;
+  }
+
+  @include desktop {
+    padding-left: 3.5rem;
+    padding-right: 3.5rem;
+  }
 
   &__hero {
     position: relative;
