--- a/client/src/pages/CalendarPage/sections/Calendar.scss
+++ b/client/src/pages/CalendarPage/sections/Calendar.scss
@@ -149,6 +149,7 @@
   &__actions {
     padding-top: .5rem;
     display: flex;
+    gap: .25rem;
     justify-content: space-between;
   }
 
